[package]
name = "rusty-stocks"
version = "0.1.0"
authors = ["Alexander Heim <alexanderheimat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "20.1.0"
mysql_common = "0.26.0"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
json = "0.12.4"
toml = "0.5.8"
plotters = "0.3.0"